add mismatch data

--- a/app.conf
+++ b/app.conf
@@ -4,9 +4,9 @@ server {
         server_name  15.206.93.142;
         error_log  /var/lib/jenkins/workspace/django-cicd/error.log
         access_log /var/lib/jenkins/workspace/django-cicd/access.log
-
+        location=/favicon.ico {access_log off;}
         location /static/{
-           root /var/lib/jenkins/workspace/django-cicd
+           root /var/lib/jenkins/workspace/django-cicd;
         }
         location / {
                 include proxy_params;
