change nginx config file

--- a/app.conf
+++ b/app.conf
@@ -1,15 +1,21 @@
 server {
-        listen 80;
-        #listen [::]:80;
-        server_name  15.206.93.142;
-        error_log  /var/lib/jenkins/workspace/django-cicd/error.log
-        access_log /var/lib/jenkins/workspace/django-cicd/access.log
-        location=/favicon.ico {access_log off;}
-        location /static/{
-           root /var/lib/jenkins/workspace/django-cicd;
-        }
-        location / {
-                include proxy_params;
-                proxy_pass http://unix:/run/gunicorn.sock;
-        }
+    listen 80;
+    #listen [::]:80;
+    server_name  15.206.93.142;
+
+    error_log  /var/lib/jenkins/workspace/django-cicd/error.log;
+    access_log /var/lib/jenkins/workspace/django-cicd/access.log;
+
+    location = /favicon.ico {
+        access_log off;
+    }
+
+    location /static/ {
+        root /var/lib/jenkins/workspace/django-cicd;
+    }
+
+    location / {
+        include proxy_params;
+        proxy_pass http://unix:/run/gunicorn.sock;
+    }
 }
