--- a/app.conf
+++ b/app.conf
@@ -1,17 +1,17 @@
 server {
     listen 80;
-    #listen [::]:80;
-    server_name  15.206.93.142;
+    server_name 15.206.93.142;
 
-    error_log  /var/lib/jenkins/workspace/django-cicd/error.log;
+    error_log /var/lib/jenkins/workspace/django-cicd/error.log;
     access_log /var/lib/jenkins/workspace/django-cicd/access.log;
 
     location = /favicon.ico {
         access_log off;
     }
 
+    # Static file serving
     location /static/ {
-        root /var/lib/jenkins/workspace/django-cicd;
+        alias /var/lib/jenkins/workspace/django-cicd/static/;
     }
 
     location / {
