--- a/app.conf
+++ b/app.conf
@@ -1,7 +1,7 @@
 server {
     listen 80;
     server_name 15.206.93.142;
-
+    root /var/lib/jenkins/workspace/django-cicd/;
     error_log /var/lib/jenkins/workspace/django-cicd/error.log;
     access_log /var/lib/jenkins/workspace/django-cicd/access.log;
 
@@ -10,9 +10,7 @@ server {
     }
 
     # Static file serving
-    location /static/ {
-        alias /var/lib/jenkins/workspace/django-cicd/static/;
-    }
+    
 
     location / {
         proxy_set_header Host $host;
