--- a/gunicorn.service
+++ b/gunicorn.service
@@ -4,7 +4,7 @@ Requires=gunicorn.socket
 After=network.target
 
 [Service]
-User=root
+User=jenkins
 WorkingDirectory=/var/lib/jenkins/workspace/django-cicd/app
 ExecStart=/var/lib/jenkins/workspace/django-cicd/env/bin/gunicorn \
           --error-logfile /var/lib/jenkins/workspace/django-cicd/error.log \
@@ -12,5 +12,6 @@ ExecStart=/var/lib/jenkins/workspace/django-cicd/env/bin/gunicorn \
           --capture-output --log-level debug \
           --bind unix:/run/gunicorn.sock \
           app.wsgi:application
+
 [Install]
-WantedBy=multi-user.target          
+WantedBy=multi-user.target
