--- a/gunicorn.service
+++ b/gunicorn.service
@@ -4,9 +4,10 @@ Requires=gunicorn.socket
 After=network.target
 
 [Service]
-[Service]
 User=jenkins
+Group=www-data  # Ensure that the group is set correctly
 WorkingDirectory=/var/lib/jenkins/workspace/django-cicd/app
+Environment="PATH=/var/lib/jenkins/workspace/django-cicd/env/bin"  # Set the virtual environment path
 ExecStart=/var/lib/jenkins/workspace/django-cicd/env/bin/gunicorn \
           --error-logfile /var/lib/jenkins/workspace/django-cicd/error.log \
           --workers 3 \
