--- a/app.conf
+++ b/app.conf
@@ -10,7 +10,9 @@ server {
     }
 
     # Static file serving
-    
+    location  /static/{
+        root /var/lib/jenkins/workspace/django-cicd;
+    }
 
     location / {
         proxy_set_header Host $host;
