--- a/gunicorn1 copy.service
+++ b/gunicorn1 copy.service
@@ -5,9 +5,9 @@ After=network.target
 
 [Service]
 User=jenkins
-Group=www-data
+Group=www-data  # Ensure that the group is set correctly
 WorkingDirectory=/var/lib/jenkins/workspace/django-cicd/app
-Environment="PATH=/var/lib/jenkins/workspace/django-cicd/env/bin"
+Environment="PATH=/var/lib/jenkins/workspace/django-cicd/env/bin"  # Set the virtual environment path
 ExecStart=/var/lib/jenkins/workspace/django-cicd/env/bin/gunicorn \
           --error-logfile /var/lib/jenkins/workspace/django-cicd/error.log \
           --workers 3 \
