--- a/gunicorn.service
+++ b/gunicorn.service
@@ -4,7 +4,7 @@ Requires=gunicorn.socket
 After=network.target
 
 [Service]
-User=jenkins
+User=root
 Group=www-data
 WorkingDirectory=/var/lib/jenkins/workspace/django-cicd/app
 #Environment="PATH=/var/lib/jenkins/workspace/django-cicd/env/bin"
