--- a/app.conf
+++ b/app.conf
@@ -19,6 +19,6 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_pass http://unix:/run/gunicorn.sock;
+        proxy_pass http://unix:/var/run/gunicorn.sock;
     }
 }
